<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logologin"
            android:layout_width="wrap_content"
            android:layout_height="246dp"
            android:adjustViewBounds="false"
            android:background="@color/fondo"
            android:baselineAligned="false"
            android:contentDescription="@string/Titulo1"
            android:longClickable="false"
            android:nestedScrollingEnabled="false"
            android:scaleType="centerInside"
            android:src="@drawable/logotipo" />

        <Button
            android:id="@+id/btnPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/azul"
            android:text="@string/perfil" />

        <Button
            android:id="@+id/btnFotos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/azul"
            android:text="@string/fotos" />

        <Button
            android:id="@+id/btnVideos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/azul"
            android:text="@string/videos" />

        <Button
            android:id="@+id/btnWeb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/azul"
            android:text="@string/web" />


    </LinearLayout>
</ScrollView>
